Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-13718

CreateWindow() should test for invalid parent parameter

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.7
    • Win32SS
    • None

    Description

      Currently, CreateWindowExW/A(.....) allows an invalid parent to be used. It should be rejected. Yes, you have a test for this already.

      if (hWndParent && ValidateHwnd(hWndParent) == NULL){
      SetLastError(ERROR_INVALID_PARAMETER);
      return NULL;
      }

      Attachments

        Issue Links

          Activity

            People

              jimtabor jimtabor
              mudhead mudhead
              Votes:
              2 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: