[NtUser] - Patch by MudHead : Should test for invalid parent parameter. See CORE-13718.

svn path=/trunk/; revision=75980